--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,11 +4,16 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    background: #1E1E1E;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+p, h1, button {
+  font-family: Inter;
 }
 
 * {
