--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -29,7 +29,7 @@
   line-height: 35px;
 }
 
-.sourceCodeButton {
+.button {
   padding: 10px;
   border: none;
   background: #298bd5;
@@ -41,11 +41,11 @@
   cursor: pointer;
 }
 
-.sourceCodeButton:hover:not(:active) {
+.button:hover:not(:active) {
   box-shadow: 5px 5px 0px #00d4ff;
 }
 
-.sourceCodeButton:active {
+.button:active {
   box-shadow: 0px 0px solid transparent;
   transform: scale(0.98);
 }
